add progress but still bug
